# ScientificComputing

./: CMakeLists.txt  main.cpp
Algorithms/DIrect/Round_Integer/: round_integer.cpp  round_integer.h
Algorithms/Direct/Power/: power.cpp  power.h
Algorithms/Iterative/Jacobi/: jacobi.cpp  jacobi.h
Algorithms/Iterative/N-th_Root/: n-th_root.cpp  n-th_root.h
Algorithms/Iterative/Sine/: sine.cpp  sine.h
Algorithms/Iterative/Square_Root/: square_root.cpp  square_root.h
Exceptions/: IndexOutOfBoundsException.h  MatrixDimensionException.h
Models/: Matrix.cpp  Matrix.h
Utils/: utils.cpp  utils.h
